Add a CLI shortcut for testing an individual rule
Activate like so:

`RULe=at-rule-empty-line-before npm run test-rule`

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tape": "babel-tape-runner \"src/**/__tests__/*.js\"",
     "pretest": "npm run lint",
     "test": "npm run tape",
+    "test-rule": "babel-tape-runner \"src/rules/$RULE/__tests__/*.js\"",
     "build": "babel src --out-dir dist",
     "prepublish": "npm run build",
     "release": "npmpub"
